k8s/client-cluster-ip-service.yaml
# clusterIP is a bit more restricting than a NodePort service
# it allows any other object inside our cluster to access the object the clusterIP is pointing at but nothing from outside the cluster can access the object the clusterIP is pointing at
apiVersion: v1
kind: Service
metadata:
    name: client-cluster-ip-service
spec:
    type: ClusterIP
    selector:
        # so the clusterIP knows what object it must point at
        component: web
    ports:
    #unlike with a NodePort service, there is no nodePort because a ClusterIP is not accessible from the outside world but only from the cluster
        - port: 3000
          #port property is the port to the object that we are governing access to
          targetPort: 3000
          #targetPort is the port that is open on the targert pod we want to have access to
