k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: ingress-service
    annotations: # to setup additional high level configuration rules around the current service
        kubernetes.io/ingress.class: nginx #tells K8s we want to create a controller based on the nginx project
        nginx.ingress.kubernetes.io/rewrite-target: / #this rules tells how the copy of nginx should behave. it says that if we match a route like /api; after sending the request to  the server it should rewrite the route with / only (REMEMBER we put the same mechanism in docker at the time)
spec:
    rules:
        - http:
            paths:
                - path: /?(.*)
                  backend:
                    serviceName: client-cluster-ip-service
                    servicePort: 3000
                - path: /api/?(.*)
                  backend:
                    serviceName: server-cluster-ip-service
                    servicePort: 5000
